--- a/addons/telnyx/docker-compose.yml
+++ b/addons/telnyx/docker-compose.yml
@@ -11,5 +11,8 @@ services:
       TELNYX_FROM: '+11231231234'
       TELNYX_TO: '+11231231234'
 
+      # SUBJECT_BLACKLIST: 'Invoice, Spam, meeting'
+      # DOMAIN_SENDERS: '{"example.com":"+11231231234","sub.example.com":"+19991112222"}'
+
     volumes:
       - ~/addon.py:/addon.py
