--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       # WEBHOOK_HEADERS: '{"Test-Header":"Hi There","Test-Header2":"4"}'
       # HMAC_SECRET: SuperSecret
       # PIP_INSTALL: 'urlrequest webhookbin'
+      # BUILTIN_ADDON: telnyx
 
     # volumes: # if need the addon
     #   - ~/addon.py:/addon.py
