--- a/addons/telnyx/docker-compose.yml
+++ b/addons/telnyx/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "25:25"
     
     environment:
+      BUILTIN_ADDON: telnyx
       TELNYX_KEY: 'KEY4354325243redsgaaegerG_GAefgewafEAWFAGE'
       TELNYX_FROM: '+11231231234'
       TELNYX_TO: '+11231231234'
@@ -14,5 +15,4 @@ services:
       # SUBJECT_BLACKLIST: 'Invoice, Spam, meeting'
       # DOMAIN_SENDERS: '{"example.com":"+11231231234","sub.example.com":"+19991112222"}'
 
-    volumes:
-      - ~/addon.py:/addon.py
+
