--- a/addons/telnyx/docker-compose.yml
+++ b/addons/telnyx/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       TELNYX_KEY: 'KEY4354325243redsgaaegerG_GAefgewafEAWFAGE'
       TELNYX_FROM: '+11231231234'
       TELNYX_TO: '+11231231234'
+      REGEX_SUB_REMOVE: '^Hello!\n\n'
 
       # SUBJECT_BLACKLIST: 'Invoice, Spam, meeting'
-      # TELNYX_FROM_DOMAINS: '{"example.com":"+11231231234","sub.example.com":"+19991112222"}'
+      # TELNYX_FROM_DOMAINS: '{"@example.com":"+11231231234","@sub.example.com":"+19991112222"}'
 
 
