--- a/.github/workflows/docker-beta.yml
+++ b/.github/workflows/docker-beta.yml
@@ -15,9 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        ref: beta
+    - name: Check out the repo
+      uses: actions/checkout@v4
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
     - name: log into docker
       run: |
@@ -25,12 +30,14 @@ jobs:
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u $DOCKER_USER --password-stdin
 
     - name: build and tag beta
+      if: ${{ github.event_name != 'schedule' }}
       run: >
-        docker build . 
+        docker buildx build 
+        --platform linux/amd64,linux/arm64
+        -f ./Dockerfile 
         -t $DOCKER_USER/${{ github.event.repository.name }}:beta
-
-    - name: push build to docker hub
-      run: docker push $DOCKER_USER/${{ github.event.repository.name }} --all-tags
+        .
+        --push
 
     - name: log out of docker
       run: docker logout
